--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>XV Años de Isabella</title>
         <link rel="stylesheet" href="./style.css">
+        <script src="https://kit.fontawesome.com/0dd6340f85.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="floating-hearts" id="hearts"></div>
@@ -25,7 +26,7 @@
                 <h2>Una Celebración Especial</h2>
                 <p>Después de 15 años llenos de amor, risas y sueños, ha llegado
                     el momento de celebrar una fecha muy importante. Te
-                    invitamos a acompañarnos en esta noche mágica donde Isabella
+                    invitamos a acompañarnos en esta noche mágica donde Mariana
                     dará su primer paso hacia la juventud.</p>
                 <p>Será una velada llena de música, baile, alegría y momentos
                     inolvidables que quedarán para siempre en nuestros
@@ -84,21 +85,21 @@
                     <div class="timeline-icon">📅</div>
                     <div class="timeline-content">
                         <h3>Fecha</h3>
-                        <p>Sábado, 15 de Agosto de 2025</p>
+                        <p>Sábado, 12 de Julio de 2025</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-icon">🕖</div>
                     <div class="timeline-content">
                         <h3>Hora</h3>
-                        <p>7:00 PM - 2:00 AM</p>
+                        <p>7:00 PM - 3:00 AM</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-icon">📍</div>
                     <div class="timeline-content">
                         <h3>Lugar</h3>
-                        <p>Salón de Eventos "Los Jardines"<br>Calle Principal
+                        <p>Salón de Eventos ""<br>Calle
                             #123, Ciudad</p>
                     </div>
                 </div>
@@ -106,7 +107,7 @@
         </section>
 
         <!-- Sección 5: Código de Vestimenta -->
-        <section class="section">
+        <!-- <section class="section">
             <div class="section-content">
                 <h2>Código de Vestimenta</h2>
                 <p>Para esta ocasión especial, el código de vestimenta es
@@ -125,18 +126,16 @@
                 <p style="margin-top: 2rem; font-style: italic;">Colores
                     sugeridos: Rosa, dorado, blanco y negro</p>
             </div>
-        </section>
+        </section> -->
 
         <!-- Sección 6: Ubicación -->
         <section class="section">
             <div class="section-content">
                 <h2>¿Cómo Llegar?</h2>
                 <div class="map-container">
-                    <div>📍 Mapa del Lugar<br>Salón "Los Jardines"</div>
+                    <div>📍 Mapa del Lugar<br>Salón ""</div>
                 </div>
-                <p>El salón cuenta con amplio estacionamiento gratuito y está
-                    ubicado en una zona de fácil acceso desde cualquier punto de
-                    la ciudad.</p>
+                <p>El salón esta ubicado en...</p>
             </div>
         </section>
 
@@ -145,31 +144,31 @@
             <div class="section-content">
                 <h2>Programa de la Noche</h2>
                 <div class="timeline-item">
-                    <div class="timeline-icon">🍸</div>
+                    <div class="timeline-icon"><i class="fa-solid fa-street-view"></i></div>
                     <div class="timeline-content">
                         <h3>7:00 PM - Recepción</h3>
-                        <p>Cocktail de bienvenida y fotografías</p>
+                        <p>Bienvenida y fotografías</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-icon">💃</div>
+                    <div class="timeline-icon"><i class="fa-solid fa-champagne-glasses"></i></div>
                     <div class="timeline-content">
                         <h3>8:00 PM - Ceremonia</h3>
-                        <p>Vals tradicional y coronación</p>
+                        <p>Vals tradicional</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-icon">🍽️</div>
+                    <div class="timeline-icon"><i class="fa-solid fa-utensils"></i></div>
                     <div class="timeline-content">
                         <h3>9:00 PM - Cena</h3>
-                        <p>Banquete de tres tiempos</p>
+                        <p>Banquete</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-icon">🎵</div>
+                    <div class="timeline-icon"><i class="fa-solid fa-music"></i></div>
                     <div class="timeline-content">
                         <h3>10:30 PM - Fiesta</h3>
-                        <p>Música, baile y diversión hasta altas horas</p>
+                        <p>Música, baile y diversión</p>
                     </div>
                 </div>
             </div>
@@ -179,14 +178,7 @@
         <section class="section">
             <div class="section-content">
                 <h2>Regalos</h2>
-                <p>Tu presencia es el mejor regalo que puedes darnos. Sin
-                    embargo, si deseas obsequiar algo especial, hemos preparado
-                    una lista de regalos o puedes contribuir con un aporte
-                    económico.</p>
-                <div style="margin-top: 2rem;">
-                    <p><strong>Mesa de Regalos:</strong> Liverpool, Palacio de
-                        Hierro</p>
-                    <p><strong>Aporte Económico:</strong> Sobre en el evento</p>
+                    <p><strong>LLuvia de sobres:</strong></p>
                 </div>
                 <p style="margin-top: 1rem; font-style: italic;">¡Lo más
                     importante es que compartas este momento especial con
@@ -198,7 +190,7 @@
         <section class="section">
             <div class="section-content">
                 <h2>Confirma tu Asistencia</h2>
-                <p>Por favor, confirma tu asistencia antes del 1 de Agosto para
+                <p>Por favor, confirma tu asistencia antes del 22 de Junio para
                     poder preparar todo con el cariño que mereces.</p>
 
                 <form class="form-container" id="confirmationForm">
@@ -227,11 +219,11 @@
                         </select>
                     </div>
 
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label for="dietary">Restricciones Alimentarias</label>
                         <textarea id="dietary" name="dietary" rows="3"
                             placeholder="Vegetariano, sin gluten, alergias, etc."></textarea>
-                    </div>
+                    </div> -->
 
                     <div class="form-group">
                         <label for="song">Canción que no puede faltar</label>
@@ -256,14 +248,14 @@
                 <h2>¡Gracias!</h2>
                 <p>Gracias por ser parte de esta historia tan especial. Tu
                     amistad y cariño han sido fundamentales en estos 15 años de
-                    vida de Isabella.</p>
+                    vida de Mariana.</p>
                 <p>Esperamos verte en esta noche mágica para crear juntos
                     recuerdos que durarán para toda la vida.</p>
 
                 <div class="social-links">
-                    <a href="#" class="social-link">📱</a>
-                    <a href="#" class="social-link">📧</a>
-                    <a href="#" class="social-link">📞</a>
+                    <a href="#" class="social-link"><i class="fa-solid fa-phone"></i></a>
+                    <a href="#" class="social-link"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" class="social-link"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
 
                 <p style="margin-top: 2rem; font-style: italic;">Con
