--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
             <div class="section-content">
                 <h2>Detalles del Evento</h2>
                 <div class="timeline-item">
-                    <div class="timeline-icon">📅</div>
+                    <div class="timeline-icon"><i class="fa-solid fa-calendar"></i></div>
                     <div class="timeline-content">
                         <h3>Fecha</h3>
                         <p>Sábado, 12 de Julio de 2025</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-icon">🕖</div>
+                    <div class="timeline-icon"><i class="fa-solid fa-clock"></i></div>
                     <div class="timeline-content">
                         <h3>Hora</h3>
                         <p>7:00 PM - 3:00 AM</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-icon">📍</div>
+                    <div class="timeline-icon"><i class="fa-solid fa-location-dot"></i></div>
                     <div class="timeline-content">
                         <h3>Lugar</h3>
                         <p>Salón de Eventos ""<br>Calle
