--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <!-- Sección 1: Hero -->
         <section class="section hero visible">
             <div class="section-content">
-                <h1>XV Años</h1>
+                <h1>15 Años</h1>
                 <h2>Mariana Hurtado Solarte</h2>
                 <p>Te invitamos a celebrar este momento especial</p>
-                <p>15 de Agosto, 2025</p>
+                <p>12 de Julio, 2025</p>
             </div>
         </section>
 
@@ -133,9 +133,20 @@
             <div class="section-content">
                 <h2>¿Cómo Llegar?</h2>
                 <div class="map-container">
-                    <div>📍 Mapa del Lugar<br>Salón ""</div>
-                </div>
-                <p>El salón esta ubicado en...</p>
+                    
+
+
+                    <div class="map-containers">
+  <iframe
+    src="https://www.google.com/maps?q=2.480949997102949,-76.68939651833449&output=embed"
+    allowfullscreen=""
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</div>
+
+</div>
+<p>El salón esta ubicado en la via principal que conduce a la vereda Cajete</p>
             </div>
         </section>
 
